Changes to be committed: 	modified:   README.md 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <style>
     /* A terme, il faudra le placer dans un fichier Css à part  */
 </style>
+<script>
+    // A terme, il faudra le placer dans un fichier Js à part
+</script>
 <body>
     <h1>Raykesh</h1>
 </body>
