--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </style>
 <script>
     // A terme, il faudra le placer dans un fichier Js à part
+    window.location.replace("https://raykesh-soneka.github.io/Portfolio/Le_Site_De_Raykesh");
 </script>
 <body>
     <h1>Raykesh</h1>
+    <h3>n'essayer pas d'hacker ce site</h3>
+    <h4>merci</h4>
 </body>
 </html>
