--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -7,11 +7,29 @@
 </head>
 <style>
     /* A terme, il faudra le placer dans un fichier Css à part  */
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+    body{
+        font-family: "Open Sans", sans-serif;
+        font-optical-sizing: auto;
+        font-style: normal;
+        font-variation-settings: "wdth" 100;
+    }
 </style>
 <script>
     // A terme, il faudra le placer dans un fichier Js à part
 </script>
 <body>
+
+    <nav>
+        <div class="LeProfile">
+            <img src="https://avatars.githubusercontent.com/u/176900346?v=4" alt="L'image de profile">
+            <h1>Raykesh</h1>
+        </div>
+        ul>(a>li)*3 
+         
+
+    </nav>
+
     <h1>Raykesh</h1>
     Bienvenue dans mon site 
 </body>
