--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -9,6 +9,8 @@
     /* A terme, il faudra le placer dans un fichier Css à part  */
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
     body{
+        padding: 0 2%;
+        margin: 0;
         font-family: "Open Sans", sans-serif;
         font-optical-sizing: auto;
         font-style: normal;
