"Added new CSS rules for .section1_de_la_page class"

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -64,6 +64,13 @@
                     display: none;
                 }
             }       
+            .section1_de_la_page{
+                margin: 5%;
+                header{
+                    margin-top: 10%;
+                max-width: 100%;
+                }
+            }
         }
 
         .section1_de_la_page{
