flex-wrap: wrap; bug
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   Le_Site_De_Raykesh.html

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -55,6 +55,8 @@
             }
             footer{
                 justify-content: flex-start;
+                text-wrap: wrap;
+                flex-wrap: wrap;
             }
             footer .Colone{
                 width: 80%;
@@ -113,6 +115,7 @@
             margin-left: -2.1%;
             display: flex;
             text-wrap: wrap;
+            flex-wrap: wrap;
             justify-content: space-around;
             background-color: black;
             color: azure;
