link to css On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Le_Site_De_Raykesh.html

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenue dans mon protfolio : Raykesh</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
