On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Le_Site_De_Raykesh.html

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -20,7 +20,7 @@
     
     <nav>
         <div class="LeProfile">
-            <img src="https://avatars.githubusercontent.com/u/176900346?v=4" alt="L'image de profile">
+            <img src="https://avatars.githubusercontent.com/u/176900346?v=4" alt="L'image de profile" title="Raykesh" >
             <h1>Raykesh</h1>
         </div>
         <!-- ul>(a>li)*3 -->
@@ -43,7 +43,7 @@
             </p>
         </header>
         <section class="imageNumeroUn">
-            <img src="https://www.kali.org/images/notebook-kali-2024.1.jpg" alt="image de présentation " width="100%">
+            <img src="https://www.kali.org/images/notebook-kali-2024.1.jpg" alt="image de présentation " width="100%" title="  Image de l'OS kali  ">
         </section>
     </section>
     <footer>
