On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Le_Site_De_Raykesh.html

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -13,7 +13,7 @@
     </style> -->
     <script>
         // A terme, il faudra le placer dans un fichier Js à part
-        alert(" Raykesh ")
+        alert(" Raykesh : Vous êtes connecté en tant que Raykesh ")
     </script>
 </head>
 <body>
