--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -8,8 +8,8 @@
     <!-- <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); body{ padding: 0 2%; margin: 0; font-family: "Open Sans", sans-serif; font-optical-sizing: auto; font-style: normal; font-variation-settings: "wdth" 100; } nav{ display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center; background-color: white; position: sticky; top: 0; } nav .LeProfile{ display: flex; align-items: center; img{ width: 40px; height: 40px; border-radius: 40%; } h1{ margin-left: 10px; font-size: 30px; } } 
-        @media screen and (max-width: 700px) { nav{ justify-content: center; ul{ display: none; } } .section1_de_la_page{ margin: 5%; header{ margin-top: 10%; max-width: 100%; } } footer{ justify-content: flex-start; text-wrap: wrap; flex-wrap: wrap; } footer .Colone{ width: 80%; } } nav ul{ display: flex; list-style-type: none; a{ text-decoration: none; color: black; } } nav ul li{ margin-left: 20 px; cursor: pointer; border-bottom: 1px solid white; margin: 10px; } nav ul li:hover{ border-bottom-color: black; } .section1_de_la_page{ margin: 4%; header{ margin-top: 5%; max-width: 80%; h1{ margin: 0; /* text-transform:none; */ font-size: 3dvw; } 
-        p{ line-height: 30px; color: #80808080; } } .imageNumeroUn{ margin-top: 5%; img{ transition: filter 0.5s; filter: brightness(50%); filter: blur(5px); } img:hover{ filter: brightness(100%); filter: blur(0px); } } } footer{ margin-top: 5%; margin-right: -2.1%; margin-left: -2.1%; display: flex; text-wrap: wrap; flex-wrap: wrap; justify-content: space-around; background-color: black; color: azure; padding: 5px; padding-bottom: 10%; .Colone{ a{ text-decoration: none; } p{ font-size: 12px; cursor: pointer; } p:hover{ color: blue; } } } .kaliSVG{ margin-top: 0%; } .footer-logo-kaliSVG{ max-width:30%; }
+        @media screen and (max-width: 700px) { nav{ justify-content: center; ul{ display: none; } } .section1_de_la_page{ margin: 5%; header{ margin-top: 10%; max-width: 100%; } } footer{ justify-content: flex-start; text-wrap: wrap; flex-wrap: wrap; } footer .Colonne{ width: 80%; } } nav ul{ display: flex; list-style-type: none; a{ text-decoration: none; color: black; } } nav ul li{ margin-left: 20 px; cursor: pointer; border-bottom: 1px solid white; margin: 10px; } nav ul li:hover{ border-bottom-color: black; } .section1_de_la_page{ margin: 4%; header{ margin-top: 5%; max-width: 80%; h1{ margin: 0; /* text-transform:none; */ font-size: 3dvw; } 
+        p{ line-height: 30px; color: #80808080; } } .imageNumeroUn{ margin-top: 5%; img{ transition: filter 0.5s; filter: brightness(50%); filter: blur(5px); } img:hover{ filter: brightness(100%); filter: blur(0px); } } } footer{ margin-top: 5%; margin-right: -2.1%; margin-left: -2.1%; display: flex; text-wrap: wrap; flex-wrap: wrap; justify-content: space-around; background-color: black; color: azure; padding: 5px; padding-bottom: 10%; .Colonne{ a{ text-decoration: none; } p{ font-size: 12px; cursor: pointer; } p:hover{ color: blue; } } } .kaliSVG{ margin-top: 0%; } .footer-logo-kaliSVG{ max-width:30%; }
     </style> -->
     <script>
         // A terme, il faudra le placer dans un fichier Js à part
@@ -47,28 +47,36 @@
         </section>
     </section>
     <footer>
-        <!-- .Colone*3>h3+p*3 -->
-        <div class="Colone">
+        <!-- .Colonne*3>h3+p*3 -->
+        <div class="Colonne">
             <h3>Raykesh</h3>
-            <p>R</p>
-            <p>R</p>
-            <p>R</p>
+            <p>Home</p>
+            <p>About</p>
+            <a href="https://github.com/Raykesh-Soneka/Portfolio"><p>GitHub</p></a>
         </div>
-        <div class="Colone">
-            <h3>Footer</h3>
-            <p>bla</p>
-            <p>bla</p>
-            <p>bla</p>
+        <div class="Colonne">
+            <h3>Development / Community</h3>
+            <a href="https://github.com/Raykesh-Soneka/Portfolio/discussions/8" target="_blank" rel="noopener noreferrer"><p>Bug Report</p></a>
+            <p>Forum</p>
         </div>
-        <div class="Colone">
+        <div class="Colonne">
             <h3>contact</h3>
             <p>Liens</p>
             <p>Réseaux social</p>
             <p>Autre</p>
         </div>
+        <div class="Colonne">
+            <h3>Policies / Legal part</h3>
+            <p>Cookies</p>
+            <p>confidentialité</p>
+            <p>Vie privée</p>
+        </div>
     </footer>
     <footer class="kaliSVG">
         <svg class="footer-logo-kaliSVG" viewBox="0 0 135.47 135.47"><path fill="currentcolor" d="m71.766 36.352s-10.212-.6795-27.602 4.7619c-17.722 5.5452-27.773 13.405-27.773 13.405s26.414-14.748 56.228-15.586zm38.09 16.035 1.3276-.08664s-7.6062-9.2286-22.165-13.724c8.1839 3.3267 15.307 7.7345 20.837 13.81zm2.1727 3.8344c.20411-.3539.86302 1.1243 1.3634 1.7453.0212.124.0564.19967-.23373.13998-.0244-.12747-.0665-.16444-.0665-.16444s-.70029-.41667-.91499-.71224c-.21487-.29556-.253-.81255-.14825-1.0086zm17.867 43.93s1.6147-18.538-27.511-22.812c-3.6915-.54163-8.3599-.9585-13.082-.97044-23.344.30865-24.195-26.924-6.6044-28.299 7.2901-.60152 15.995 3.3311 24.505 7.2941-.0316 1.0569.0121 1.9961.70646 2.864.69414.86762 3.3607 1.8142 4.2128 2.3031.85203.48907 3.5816 2.2245 5.2543 4.4017.36275-.67854 3.3921-2.6504 3.3921-2.6504s-.72571.01579-2.414-.61519c-1.6885-.63098-3.6921-2.5401-3.7395-2.6504-.0473-.11052-.0788-.28401.31578-.36295.2996-.25224-.37893-1.0727-.67874-1.3723-.2996-.2998-2.3036-3.7073-2.3508-3.7863-.0473-.07894-.0632-.1577-.20507-.25243-.4419-.1421-2.3826.20506-2.3826.20506s-2.9847-1.4659-4.0135-4.6264c.015.55358-.5118 1.158.0 2.4298-1.5562-.65832-2.8929-1.7811-3.9472-4.5557-.62751 1.5781.0 2.5815.0 2.5815s-3.6646-1.024-4.2509-4.4036c-.6435 1.5171.0 2.4296.0 2.4296s-5.9742-3.1172-15.901-3.1624c-6.646-.60961-8.0296-12.301-7.4139-14.269.0.0-9.586-5.0521-28.456-7.2841-18.87-2.2322-34.346-.33638-34.346-.33638s33.421-1.6039 60.195 9.2356c.91018 4.0709 3.6482 10.851 5.1229 14.11-4.2197 2.9175-8.9781 5.6609-9.7191 15.391-.74074 9.7297 7.6245 18.288 17.998 18.552 9.8502.52469 16.656.59921 24.905 4.8759 7.8739 4.3537 14.33 17.62 14.969 29.551.69008-8.8524-2.632-27.889-18.134-33.669 21.667 3.7917 23.573 19.854 23.573 19.854zm-58.64-65.253-.77963-2.5147s-12.864-2.2844-30.16-1.055c-17.296 1.2294-34.759 7.2839-34.759 7.2839s35.732-8.991 65.698-3.7143"/></svg>
     </footer>
+    <p>
+        © Raykesh 2024. All rights reserved.
+    </p>
 </body>
 </html>
