Icones + nav Bug correction
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   Le_Site_De_Raykesh.html
	new file:   images/iconeDeBase.ico
	new file:   images/iconeF.ico
	modified:   index.html
	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenue dans mon protfolio : Raykesh</title>
+    <link rel="icon" type="image/x-icon" href="/images/iconeDeBase.ico">
 </head>
 <style>
     /* A terme, il faudra le placer dans un fichier Css à part  */
