--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenue dans mon protfolio : Raykesh</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/images/iconeF.ico">
     <!-- <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); body{ padding: 0 2%; margin: 0; font-family: "Open Sans", sans-serif; font-optical-sizing: auto; font-style: normal; font-variation-settings: "wdth" 100; } nav{ display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center; background-color: white; position: sticky; top: 0; } nav .LeProfile{ display: flex; align-items: center; img{ width: 40px; height: 40px; border-radius: 40%; } h1{ margin-left: 10px; font-size: 30px; } } 
