On branch main : Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Le_Site_De_Raykesh.html
	modified:   style.css

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -14,8 +14,9 @@
     </style> -->
     <script>
         // A terme, il faudra le placer dans un fichier Js à part
-        alert(" Raykesh : Vous êtes connecté en tant que Raykesh ")
+        // alert(" Raykesh : Vous êtes connecté en tant que Raykesh ")
     </script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
     
@@ -46,6 +47,28 @@
         <section class="imageNumeroUn">
             <img src="https://www.kali.org/images/notebook-kali-2024.1.jpg" alt="image de présentation " width="100%" title="  Image de l'OS kali  ">
         </section>
+
+        <section class="colonne2Div">
+            <div class="LesColone">
+                <!-- div.item*5 -->
+                <div class="item">
+                    <h4>github</h4>
+                    <a class="github-button" href="https://github.com/Raykesh-Soneka" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true" aria-label="Follow @Raykesh-Soneka on GitHub">
+                        Follow @Raykesh-Soneka</a>
+                    <a class="github-button" href="https://github.com/Raykesh-Soneka/Portfolio" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true" aria-label="Star Raykesh-Soneka/Portfolio on GitHub">
+                        Star</a>
+
+                    <a class="github-button" href="https://github.com/Raykesh-Soneka/Portfolio/discussions" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" aria-label="Discuss Raykesh-Soneka/Portfolio on GitHub">
+                        Discuss</a>
+                </div>
+                <div class="item">R</div>
+                <div class="item">R</div>
+                <div class="item">R</div>
+                <div class="item">R</div>
+            </div>
+            
+        </section>
+
     </section>
     <footer>
         <!-- .Colonne*3>h3+p*3 -->
