On branch main Your branch is ahead of 'origin/main' by 1 commit.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Le_Site_De_Raykesh.html

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -14,7 +14,7 @@
     </style> -->
     <script>
         // A terme, il faudra le placer dans un fichier Js à part
-        // alert(" Raykesh : Vous êtes connecté en tant que Raykesh ")
+        alert(" Raykesh : Vous êtes connecté en tant que Raykesh ")
     </script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
