On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Le_Site_De_Raykesh.html
	modified:   README.md

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenue dans mon protfolio : Raykesh</title>
+    <meta name="author" content="Raykesh" />
+    <meta name="keywords" content="HTML, CSS, JavaScript">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/images/iconeF.ico">
     <!-- <style>
