On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Le_Site_De_Raykesh.html

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -63,10 +63,18 @@
                     <a class="github-button" href="https://github.com/Raykesh-Soneka/Portfolio/discussions" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" aria-label="Discuss Raykesh-Soneka/Portfolio on GitHub">
                         Discuss</a>
                 </div>
-                <div class="item">R</div>
-                <div class="item">R</div>
-                <div class="item">R</div>
-                <div class="item">R</div>
+                <div class="item">
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio/blob/main/README.md">README.md of this project</a>
+                </div>
+                <div class="item">
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio/tree/main?tab=readme-ov-file#html-" target="_parent" rel="noopener noreferrer">HTML</a>
+                </div>
+                <div class="item">
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio/tree/main?tab=readme-ov-file#css-" target="_parent" rel="noopener noreferrer">CSS</a>
+                </div>
+                <div class="item">
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio/tree/main?tab=readme-ov-file#js-" target="_parent" rel="noopener noreferrer">JS</a>
+                </div>
             </div>
             
         </section>
