--- a/Cyber/templateCyber.html
+++ b/Cyber/templateCyber.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <title>Bienvenue dans mon protfolio. Raykesh : <div id="output">TODO</div> </title> -->
+    <!-- <title><div id="output">TODO</div> : Raykesh. Bienvenue dans mon protfolio. </title> -->
     <link rel="icon" type="image/x-icon" href="/images/iconeDeBase.ico">
     <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
@@ -20,6 +20,9 @@
     </script>
 </head>
 <body>
+    <h1>Bienvenue Dans la partie cyber</h1>
+    <h3>patience c'est en cours</h3>
+    <h4>merci</h4>
     <h1>Raykesh</h1>
     <h3>n'essayer pas d'hacker ce site</h3>
     <h4>merci</h4>
