"Refactored CSS styles and updated HTML content in Cyber/styleCyber.css and Cyber/templateCyber.html files"

--- a/Cyber/templateCyber.html
+++ b/Cyber/templateCyber.html
@@ -30,26 +30,25 @@
         </div>
         <!-- ul>(a>li)*3 -->
         <ul>
-            <li> Mes Projet </li>
-            <li> Curriculum vitæ </li>
-            <li> About Me </li>
+            <a href="Cyber\Blue Team\BlueTeam.html" rel="noopener noreferrer" ><li> Blue Team </li></a>
+            <a href= "Cyber\Red Team\RedTeam.html"  rel="noopener noreferrer" ><li> Red  Team </li></a>
+            <a href= "Cyber.html"                   rel="noopener noreferrer" ><li>   Cyber   </li></a>
         </ul>
          
 
     </nav>
     <section class="section1_de_la_page">
         <header>
-
-            <h1>Bonjours,</h1>
+            <h1>Bienvenue Dans la partie cyber</h1>
             <p>
-                Bienvenue dans mon site, ce site est un Portfolio réaliser par Raykesh. Vous êtes actuellement sur mon site. Il y a une barre de navigation
-                en haut avec des onglets qui feront une redirection. Si certaine fonctionalités ne marchent pas encore, c'est qu'elle sont en maintenance 
+                patience c'est en cours
+            </p>
+            <p>
+                cette partie du site est consacrée à la cybersécurité. Vous êtes actuellement sur mon site. Il y a une barre de navigation
+                en haut avec des onglets qui feront une redirection vers la partie cyber. Si certaine fonctionalités ne marchent pas encore, c'est qu'elle sont en maintenance 
                 et seront disponible très bientôt donc patience.
             </p>
         </header>
-        <h1>Bienvenue Dans la partie cyber</h1>
-        <h3>patience c'est en cours</h3>
-        <h4>merci</h4>
         <h1>Raykesh</h1>
         <h3>n'essayer pas d'hacker ce site</h3>
         <h4>merci</h4>
