On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   AboutMe.html
	modified:   Cyber/styleCyber.css
	modified:   Cyber/templateCyber.html
	modified:   Le_Site_De_Raykesh.html

--- a/Cyber/templateCyber.html
+++ b/Cyber/templateCyber.html
@@ -30,6 +30,7 @@
         </div>
         <!-- ul>(a>li)*3 -->
         <ul>
+            <a href="../Le_Site_De_Raykesh.html"    rel="noopener noreferrer" ><li> Home      </li></a>
             <a href="Cyber\Blue Team\BlueTeam.html" rel="noopener noreferrer" ><li> Blue Team </li></a>
             <a href= "Cyber\Red Team\RedTeam.html"  rel="noopener noreferrer" ><li> Red  Team </li></a>
             <a href= "Cyber.html"                   rel="noopener noreferrer" ><li>   Cyber   </li></a>
