--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -31,7 +31,7 @@
         <ul>
             <li> Mes Projet </li>
             <li> Curriculum vitæ </li>
-            <li> About Me </li>
+            <a href= "AboutMe.html"                   rel="noopener noreferrer" ><li> About Me </li></a>
         </ul>
          
 
