--- a/AboutMe.html
+++ b/AboutMe.html
@@ -37,7 +37,9 @@
 </head>
 <body>
     <p>About Me : </p>
+    Je suis Raykesh, j'ai créé ce site. à SUIVRE...
     <ul><a href="../Le_Site_De_Raykesh.html"    rel="noopener noreferrer" ><li> Home      </li></a></ul>
+    <ul><a href="../Cyber.html"    rel="noopener noreferrer" ><li> Cyber      </li></a></ul>
     <div id="f">
         <div html_Inclusion="Le_Site_De_Raykesh.html"></div>
         <script>htmlInclusion();</script>
