"Updated AboutMe.html: modified text, changed Cyber link URL, and reformatted HTML"

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -37,9 +37,10 @@
 </head>
 <body>
     <p>About Me : </p>
-    Je suis Raykesh, j'ai créé ce site. à SUIVRE...
-    <ul><a href="../Le_Site_De_Raykesh.html"    rel="noopener noreferrer" ><li> Home      </li></a></ul>
-    <ul><a href="../Cyber.html"    rel="noopener noreferrer" ><li> Cyber      </li></a></ul>
+    Je suis Raykesh, j'ai créé ce site. ici vous trouverez le lien vers la partie cybersécurité. elle est un peu caché pour des questions de sécurités. 
+    à SUIVRE...
+    <ul><a href="../Le_Site_De_Raykesh.html" rel="noopener noreferrer" ><li> Home      </li></a></ul>
+    <ul><a href="Cyber/Cyber.html" rel="noopener noreferrer" ><li> Cyber      </li></a></ul>
     <div id="f">
         <div html_Inclusion="Le_Site_De_Raykesh.html"></div>
         <script>htmlInclusion();</script>
