"Added title attributes to various HTML anchor tags for improved accessibility."

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -31,7 +31,7 @@
         <ul>
             <li> Mes Projet </li>
             <li> Curriculum vitæ </li>
-            <a href= "AboutMe.html"                   rel="noopener noreferrer" ><li> About Me </li></a>
+            <a href= "AboutMe.html" title="About Me" rel="noopener noreferrer" ><li> About Me </li></a>
         </ul>
          
 
@@ -55,25 +55,25 @@
                 <!-- div.item*5 -->
                 <div class="item">
                     <h4>github</h4>
-                    <a class="github-button" href="https://github.com/Raykesh-Soneka" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true" aria-label="Follow @Raykesh-Soneka on GitHub">
+                    <a class="github-button" title="Suivre le Repo" href="https://github.com/Raykesh-Soneka" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true" aria-label="Follow @Raykesh-Soneka on GitHub">
                         Follow @Raykesh-Soneka</a>
-                    <a class="github-button" href="https://github.com/Raykesh-Soneka/Portfolio" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true" aria-label="Star Raykesh-Soneka/Portfolio on GitHub">
+                    <a class="github-button" title="Mettre 5 étoile" href="https://github.com/Raykesh-Soneka/Portfolio" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true" aria-label="Star Raykesh-Soneka/Portfolio on GitHub">
                         Star</a>
 
-                    <a class="github-button" href="https://github.com/Raykesh-Soneka/Portfolio/discussions" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" aria-label="Discuss Raykesh-Soneka/Portfolio on GitHub">
+                    <a class="github-button" title="Accèder au channel pour parler" href="https://github.com/Raykesh-Soneka/Portfolio/discussions" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" aria-label="Discuss Raykesh-Soneka/Portfolio on GitHub">
                         Discuss</a>
                 </div>
                 <div class="item">
-                    <a href="https://github.com/Raykesh-Soneka/Portfolio/blob/main/README.md">README.md of this project</a>
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio/blob/main/README.md"title="Fichier texte contenant la documentation">README.md of this project</a>
                 </div>
                 <div class="item">
-                    <a href="https://github.com/Raykesh-Soneka/Portfolio/tree/main?tab=readme-ov-file#html-" target="_parent" rel="noopener noreferrer">HTML</a>
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio/tree/main?tab=readme-ov-file#html-" target="_parent" rel="noopener noreferrer"title="documentation sur l'HTML">HTML</a>
                 </div>
                 <div class="item">
-                    <a href="https://github.com/Raykesh-Soneka/Portfolio/tree/main?tab=readme-ov-file#css-" target="_parent" rel="noopener noreferrer">CSS</a>
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio/tree/main?tab=readme-ov-file#css-" target="_parent" rel="noopener noreferrer"title="documentation sur le CSS">CSS</a>
                 </div>
                 <div class="item">
-                    <a href="https://github.com/Raykesh-Soneka/Portfolio/tree/main?tab=readme-ov-file#js-" target="_parent" rel="noopener noreferrer">JS</a>
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio/tree/main?tab=readme-ov-file#js-" target="_parent" rel="noopener noreferrer"title="documentation sur le Javascript">JS</a>
                 </div>
             </div>
             
@@ -86,11 +86,11 @@
             <h3>Raykesh</h3>
             <p>Home</p>
             <p>About</p>
-            <a href="https://github.com/Raykesh-Soneka/Portfolio"><p>GitHub</p></a>
+            <a href="https://github.com/Raykesh-Soneka/Portfolio"title="Lien vers le Repertoire"><p>GitHub</p></a>
         </div>
         <div class="Colonne">
             <h3>Development / Community</h3>
-            <a href="https://github.com/Raykesh-Soneka/Portfolio/discussions/8" target="_blank" rel="noopener noreferrer"><p>Bug Report</p></a>
+            <a href="https://github.com/Raykesh-Soneka/Portfolio/discussions/8" target="_blank" rel="noopener noreferrer" title="Lien vers la discussions"><p>Bug Report</p></a>
             <p>Forum</p>
         </div>
         <div class="Colonne">
