--- a/AboutMe.html
+++ b/AboutMe.html
@@ -39,8 +39,8 @@
     <p>About Me : </p>
     Je suis Raykesh, j'ai créé ce site. ici vous trouverez le lien vers la partie cybersécurité. elle est un peu caché pour des questions de sécurités. 
     à SUIVRE...
-    <ul><a href="Le_Site_De_Raykesh.html" rel="noopener noreferrer" ><li> Home      </li></a></ul>
-    <ul><a href="Cyber/Cyber.html" rel="noopener noreferrer" ><li> Cyber      </li></a></ul>
+    <ul><a href="Le_Site_De_Raykesh.html" rel="noopener noreferrer" title="Page Principale"><li> Home      </li></a></ul>
+    <ul><a href="Cyber/Cyber.html" rel="noopener noreferrer" title="êtes vous sûr?êtes vous sûr de vouloir cliquer?"><li> Cyber      </li></a></ul>
     <div id="f">
         <div html_Inclusion="Le_Site_De_Raykesh.html"></div>
         <script>htmlInclusion();</script>
