"Added title attributes to navigation links"

--- a/Cyber/templateCyber.html
+++ b/Cyber/templateCyber.html
@@ -45,9 +45,9 @@
         </div>
         <!-- ul>(a>li)*3 -->
         <ul>
-            <a href="../Le_Site_De_Raykesh.html"    rel="noopener noreferrer" title="Page Principale"><li> Home      </li></a>
-            <a href="Blue Team\BlueTeam.html" rel="noopener noreferrer" ><li> Blue Team </li></a>
-            <a href= "Red Team\RedTeam.html"  rel="noopener noreferrer" ><li> Red  Team </li></a>
+            <a href="../Le_Site_De_Raykesh.html"    rel="noopener noreferrer" title="Page Principale">                                <li> Home      </li></a>
+            <a href="Blue Team\BlueTeam.html"       rel="noopener noreferrer" title="Page Blue Team ">                                <li> Blue Team </li></a>
+            <a href= "Red Team\RedTeam.html"        rel="noopener noreferrer" title="Page Red  Team ">                                <li> Red  Team </li></a>
             <a href= "Cyber.html"                   rel="noopener noreferrer" title="êtes vous sûr?êtes vous sûr de vouloir cliquer?"><li>   Cyber   </li></a>
         </ul>
          
