On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   .gitignore
	modified:   AboutMe.html

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,13 +34,16 @@
             elem.children('a').removeAttr('href');
         }
     </script>
+    <link rel="icon" type="image/x-icon" href="/images/iconeF.ico">
+    <meta name="author" content="Raykesh" />
+    <meta name="keywords" content="AboutMe">
 </head>
 <body>
     <p>About Me : </p>
     Je suis Raykesh, j'ai créé ce site. ici vous trouverez le lien vers la partie cybersécurité. elle est un peu caché pour des questions de sécurités. 
     à SUIVRE...
     <ul><a href="Le_Site_De_Raykesh.html" rel="noopener noreferrer" title="Page Principale"><li> Home      </li></a></ul>
-    <ul><a href="Cyber/Cyber.html" rel="noopener noreferrer" title="êtes vous sûr?êtes vous sûr de vouloir cliquer?"><li> Cyber      </li></a></ul>
+    <ul><a href="Cyber/Cyber.html" rel="noopener noreferrer" title="êtes vous sûr? êtes vous sûr de vouloir cliquer?"><li> Cyber      </li></a></ul>
     <div id="f">
         <div html_Inclusion="Le_Site_De_Raykesh.html"></div>
         <script>htmlInclusion();</script>
