--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="icon" type="image/x-icon" href="/images/iconeF.ico"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="/images/iconeF.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="./images/iconeF.ico?">
     <!-- <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); body{ padding: 0 2%; margin: 0; font-family: "Open Sans", sans-serif; font-optical-sizing: auto; font-style: normal; font-variation-settings: "wdth" 100; } nav{ z-index: 10;display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center; background-color: white; position: sticky; top: 0; } nav .LeProfile{ display: flex; align-items: center; img{ width: 40px; height: 40px; border-radius: 40%; } h1{ margin-left: 10px; font-size: 30px; } } 
