Utilisation du Chemin relative pour les favicon "Updated favicon links in multiple HTML files to use relative paths and added query parameter" On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   AboutMe.html
	modified:   Cyber/Cyber.html
	modified:   Cyber/FooterTemplateCyber.html
	modified:   Cyber/templateCyber.html
	modified:   index.html
	modified:   template.html

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -34,7 +34,8 @@
             elem.children('a').removeAttr('href');
         }
     </script>
-    <link rel="icon" type="image/x-icon" href="/images/iconeF.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="/images/iconeF.ico"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="./images/iconeF.ico?">
     <meta name="author" content="Raykesh" />
     <meta name="keywords" content="AboutMe">
 </head>
