--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenue dans mon protfolio : Raykesh</title>
-    <link rel="icon" type="image/x-icon" href="/images/iconeDeBase.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="/images/iconeDeBase.ico"> -->
+    <link rel="icon" type="image/x-icon" href="./images/iconeDeBase.ico?">
     <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
     </style>
