"Updated favicon paths in Cyber.html, FooterTemplateCyber.html, and templateCyber.html to use ../images/iconeDeBase.ico instead of ./images/iconeDeBase.ico"

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title><div id="output">TODO</div> : Raykesh. Bienvenue dans mon protfolio. </title> -->
     <!-- <link rel="icon" type="image/x-icon" href="/images/iconeDeBase.ico"> -->
-    <link rel="icon" type="image/x-icon" href="./images/iconeDeBase.ico?">
+    <link rel="icon" type="image/x-icon" href="./../images/iconeDeBase.ico?">
     <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
     </style>
