--- a/Cyber/FooterTemplateCyber.html
+++ b/Cyber/FooterTemplateCyber.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title><div id="output">TODO</div> : Raykesh. Bienvenue dans mon protfolio. </title> -->
     <!-- <link rel="icon" type="image/x-icon" href="/images/iconeDeBase.ico"> -->
-    <link rel="icon" type="image/x-icon" href="./images/iconeDeBase.ico?">
+    <link rel="icon" type="image/x-icon" href="./../images/iconeDeBase.ico?">
     <meta name="author" content="Raykesh" />
     <meta name="keywords" content="Cyber">
     <link rel="stylesheet" href="styleCyber.css">
