fond en papier pour la cyber
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   Cyber/styleCyber.css
	modified:   Cyber/templateCyber.html

--- a/Cyber/templateCyber.html
+++ b/Cyber/templateCyber.html
@@ -32,7 +32,7 @@
             console.log("Waited 4s");
             await delay(1000);
             console.log("Waited 5s");
-            window.location.replace("../Le_Site_De_Raykesh.html");
+            // window.location.replace("../Le_Site_De_Raykesh.html");
         };
         MaFonctionQuiAttend()
         
