"Hide certain header elements and update summary text in Cyber.html"

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -42,15 +42,15 @@
     <section class="section1_de_la_page">
         <header>
             <h1>Bienvenue Dans la partie cyber</h1>
-            <h3>patience c'est en cours</h3>
-            <h4>merci</h4>
+            <h3 hidden>patience c'est en cours</h3>
+            <h4 hidden>merci</h4>
         </header>
         <h1 hidden>Raykesh</h1>
         <h3 hidden>n'essayer pas d'hacker ce site</h3>
         <h4 hidden>merci</h4>
         
         <details>
-            <summary>Menu </summary>
+            <summary>Le Menu du jour : </summary>
             <nav>
                 <h2>Cybersécurité : </h2>
                 <ul>
