On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -60,7 +60,9 @@
                 </ul>
             </nav>
         </details>
-            
+        <h3 id="Item1">Item 1</h3>    
+        <h3 id="Item2">Item 2</h3>    
+        <h3 id="Item3">Item 3</h3>    
         </section>
         <div class="fin"></div>
         <footer class="kaliSVG">
