"Updated navigation links to use anchor tags (#Item1, #Item2, #Item3) instead of empty hrefs."

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -54,9 +54,9 @@
             <nav>
                 <h2>Cybersécurité : </h2>
                 <ul>
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 2</a></li>
-                    <li><a href="#">Item 3</a></li>
+                    <li><a href="#Item1">Item 1</a></li>
+                    <li><a href="#Item2">Item 2</a></li>
+                    <li><a href="#Item3">Item 3</a></li>
                 </ul>
             </nav>
         </details>
