"Updated Cyber.html: reformatted code block with added syntax highlighting, options, and examples for the 'ls' command."
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -71,10 +71,32 @@
         ls
         ```
          -->
-        <pre><code >
-                ls
-        </code></pre>
-        
+        <div id="CodeKaliZsh">
+
+<pre><code >
+ls
+</code></pre>
+<!-- Sur https://highlight.hohli.com/?numbers=1&theme=github-dark&language=shell -->
+<pre style="font-family:monospace;color: rgb(201, 209, 217); background-color: rgb(13, 17, 23); font-weight: 400; ">
+<ol style="padding-left: 3em;"><li>ls</li></ol></pre>
+Permet de voir le contenu (<strong style="font-size: 1.5em;">l</strong>i<strong style="font-size: 1.5em;">s</strong>ter) du dossier/répertoire courant 
+<pre>
+
+    Option utile : 
+        <code>-a, --all</code>              : pour affichez tout (notament les fichiers cachées)
+        <code>-A, --almost-all</code>       : pour presque affichez tout (notament les fichiers cachées sans affichez . et .. qui représent respactivement le répertoire courant et le répertoire parent )
+        <code>-A, --help</code>             : pour affichez la documentation de base de la commande
+        <code>-R, --recursive</code>        : pour affichez récursivement le contenu du répertoire courant et des sous-répertoires
+        <code>-s, --size</code>             : pour affichez la taille des fichier
+    Utilisation : ls [OPTION]... [FICHIER]...
+    Example :
+        Le fichier peut être un répertoire :
+        ls ..
+        ls
+        ls / -R -a
+</pre>
+
+        </div>
 
         <h3 id="Item2">Item 2</h3>    
         <h3 id="Item3">Item 3</h3>    
