On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -23,6 +23,8 @@
 
         CodeColorSyntaxHighlightR(document.getElementById("CodeKaliZsh"), "zsh");
         
+        var pagePrecedente = history.back();
+        console.log("La page précédente est : " + pagePrecedente);
         
     </script>
 </head>
