On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -21,6 +21,7 @@
         console.log(" Le titre de la page est : " + document.title);
         console.log( page );
 
+        console.log("La page précédente ?");
         // CodeColorSyntaxHighlightR(document.getElementById("CodeKaliZsh"), "zsh");
         
         var pagePrecedente = history.back();
